[package]
name = "nacos-perf-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.19.1", features = ["full"] }
clap = { version = "3.2.4", features = ["derive"] }
warp = "0.3.2"
tokio-cron-scheduler = "0.7.4"
ctrlc = "3.2.2"
urlencoding = "2.1.0"
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"